traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:7: error: ';' expected but 'true' found.
                      return(){true} true }
                                     ^